--- a/src/pages/NotFound/ui/NotFound.scss
+++ b/src/pages/NotFound/ui/NotFound.scss
@@ -3,7 +3,7 @@
 //   src: url(./../asset/fonts/RasmusAndersson-Inter/1593443255805-Inter-Medium.otf);
 // }
 .error-page {
-  width: 100vw;
+  // width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: center;
