--- a/src/shared/ui/blocks/Images/Images.scss
+++ b/src/shared/ui/blocks/Images/Images.scss
@@ -3,7 +3,7 @@
     height: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: var(--pm-x);
+  gap: var(--spacing-m);
     img{
         width: 100%;
         height: 100%;
