--- a/src/widgets/National/ui/National.scss
+++ b/src/widgets/National/ui/National.scss
@@ -1,14 +1,16 @@
 .National {
-  background-color: var(--bg-color-02);
-  padding: var(--pm-x);
+  background-color: var( --block-bg);
+  padding: var(--spacing-m);
   display: flex;
   flex-direction: column;
   align-items: center;
   color: var(--font-color-light);
   overflow: hidden;
   row-gap: 10px;
-  border-radius: var(--cr-x);
+  border-radius: var(--radius-xl);
 img{
-  height: 400px;
+  max-height: 400px;
+  max-width: 100%;
+
 }
 }
