--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,38 +1,24 @@
 .app.dark {
-  --white: #27292d;
-  --black: #fff;
-  --light: #161617;
-  --dark: #515151;
+
   --red: #cb0e4e;
   --dark-red: #a00c3d;
-  --text-primary: #fff;
-  --text-heading: #fff;
-  --text-footer: #a1a1a1;
-  --text-input: #b2b2b2;
-  --border: #515151;
-  --border-secondary: #e2e2e2;
-  --border-accordion: #e4e4e4;
-  --border-check: #bce0fd;
-  --border-account: #d9d9d9;
-  --cart-bg: #38393d;
-  --footer-bg: #515151;
-  --comment-bg: #515151;
-  --primary-bg: #2699fb;
-  --secondary-bg: #dbd6d6;
+ 
 
-  --btn-bg: #533ec9;
-  --btn-color: #ffffff;
-  --btn-bg-h: rgb(97, 122, 207);
-  --item-menu-color: #9ca3af;
-  --list-color: #15088b;
+  --button-bg: #533ec9;
+  --button-text: #ffffff;
+  --button-bg-hover: rgb(97, 122, 207);
+  --menu-item-text: #9ca3af;
+  --list-item-text: #15088b;
 
-  --bg-color-00: #0a0a0a;
-  --bg-color-01: #201e29;
-  --bg-color-nav: #151516;
-  --bg-color-nav-item: #252527;
-  --bg-color-02: #1c1c1c;
+  --background-main: #0a0a0a;
+    --background-alt: #201e29;
+  --panel-bg: #151516;
+   --panel-item-bg: #252527;
+   --block-bg: #1c1c1c;
   --shadow-color: rgba(15, 24, 27, 0.12);
   --font-color-light: #d4e5ee;
-  --color-link: rgb(146, 132, 207);
-  --QRClolor:rgb(255, 255, 255);
+  --link-color: rgb(146, 132, 207);
+  --color-form-input: #2C2C30;
+  --color-form-input-text: #fff;
+   --qr-color:rgb(255, 255, 255);
 }
