--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,42 +1,36 @@
 .app.light {
-  --white: #6d4141;
-  --black: #000;
-  --light: #fcfcfc;
-  --dark: #f5f5f5;
-  --red: #ff0055;
-  --dark-red: #a00c3d;
-  --text-primary: #707070;
-  --text-heading: #4e4e4e;
-  --text-input: #464444;
-  --text-footer: #a1a1a1;
-  --border: #dbd6d6de;
-  --border-secondary: #e2e2e2;
-  --border-accordion: #e4e4e4;
-  --border-check: #bce0fd;
-  --border-account: #d9d9d9;
-  --cart-bg: #ecebeb;
-  --footer-bg: #f8f8f8;
-  --comment-bg: #fafafa;
-  --primary-bg: #2699fb;
-  --secondary-bg: #dbd6d6;
+  /* Основные цвета */
+  --red: #ff0055; /* Основной красный */
+  --dark-red: #a00c3d; /* Темный красный */
 
-  --btn-bg:#4096FF;
-  --btn-color: #ffffff;
-  --btn-bg-h: #40a9ff;
+  /* Цвета для кнопок */
+  --button-bg: #ff8c40; /* Фон кнопки */
+  --button-text: #ffffff; /* Текст на кнопке */
+  --button-bg-hover: #ff5d40; /* Фон кнопки при наведении */
 
-  --item-menu-color: #374151;
+  /* Цвета меню */
+  --menu-item-text: #374151; /* Цвет текста элементов меню */
 
-  --list-color: #15088b;
-  --bg-color-00: #FAE3EA;
-  --bg-color-01: #ebebf7;
- --bg-color-nav: #F3F7FC;
- --bg-color-nav-item:#ffffff;
-  --bg-color-02: #ffffff;
-  --shadow-color: rgba(9, 36, 51, 0.12);
-  --font-color-light: #000000;
+  /* Цвета списков */
+  --list-item-text: #15088b; /* Цвет текста в списках */
 
-  --color-link: rgb(0, 0, 0);
-  --QRClolor:rgb(0, 0, 0);
+  /* Фоны */
+  --background-main: #fae3ea; /* Основной фон */
+  --background-alt: #ebebf7; /* Альтернативный фон */
+  --panel-bg: #f0f0f0; /* Фон панели */
+  --panel-item-bg: #ffffff; /* Фон элементов панели */
+  --block-bg: #ffffff; /* Фон блоков */
  
+    /* Тени */
+  --shadow-color: rgba(9, 36, 51, 0.12);
 
+   /* Цвета текста */
+  --font-color-light: #000000;
+     /* Цвета input */
+  --color-form-input: #ffffff;
+  --color-form-input-text: #000000;
+
+  --link-color: rgb(0, 0, 0);
+  /* Цвет для QR кодов */
+  --qr-color: rgb(0, 0, 0); /* Цвет QR кода */
 }
