--- a/src/features/FullScreenView/ui/FullScreenView.scss
+++ b/src/features/FullScreenView/ui/FullScreenView.scss
@@ -8,13 +8,13 @@
     backdrop-filter: blur(50px);
     display: grid;
     grid-template-rows: 80px 1fr 80px;
-    gap: var(--pm-m);
+    gap: var(--spacing-xs);
     transition: transform 0.2s ease-in-out;
     opacity: 0;
     animation: flight 0.5s ease-in-out forwards;
   }
   &__toolbar {
-    padding: var(--pm-s);
+    padding: var(--spacing-xxs);
     width: 100%;
     height: 100%;
     display: flex;
@@ -24,12 +24,12 @@
       background-color: #000000; /* Черный */
       border: none;
       color: white;
-      padding: var(--pm-m) var(--pm-x);
+      padding: var(--spacing-xs) var(--spacing-m);
       text-align: center;
       text-decoration: none;
       display: flex;
       font-size: 14px;
-      border-radius: var(--cr-s);
+      border-radius: var(--radius-md);
       transition: all 0.2s ease;
       svg{
      
@@ -45,7 +45,7 @@
     // background-color: rgb(255, 0, 0);
   }
   &__viewport {
-    padding: var(--pm-s);
+    padding: var(--spacing-xxs);
     width: 100%;
     height: 100%;
     display: flex;
@@ -55,7 +55,7 @@
     // background-color: rgb(43, 255, 0);
   }
   &__thumbs {
-    padding: var(--pm-s);
+    padding: var(--spacing-xxs);
     width: 100%;
     height: 100%;
     // background-color: rgb(98, 0, 255);
