--- a/src/features/special-feature/ui/Style.scss
+++ b/src/features/special-feature/ui/Style.scss
@@ -2,18 +2,18 @@
 width: 100%;
 height: 200px;
 background-color: rgb(245, 240, 240);
-padding: var(--pm-m);
+padding: var(--spacing-xs);
 position: relative;
 &__block-wrap{
     width: 100%;
     display: flex;
-    gap: var(--pm-m);
+    gap: var(--spacing-xs);
     align-items: center;
 }
 }
 
 .btn__exit{
     position: absolute;
-    right: var(--pm-m);
-    bottom: var(--pm-m);
+    right: var(--spacing-xs);
+    bottom: var(--spacing-xs);
 }
