--- a/src/pages/articlePage/ui/articlePage.scss
+++ b/src/pages/articlePage/ui/articlePage.scss
@@ -5,7 +5,7 @@
        
         display: flex;
         flex-direction: column;
-        row-gap: var(--pm-x);
+        row-gap: var(--spacing-m);
     @media screen and (max-width: 768px) {
       width: 100%;
       
