--- a/src/pages/defaultPage/ui/defaultPage.scss
+++ b/src/pages/defaultPage/ui/defaultPage.scss
@@ -1,20 +1,20 @@
 .Page{
    
     display: block;
-    background-color: var(--bg-color-02);
+    background-color: var( --block-bg);
     color: var(--font-color-light);
     width: 100%;
-    padding: var(--pm-x);
+    padding: var(--spacing-m);
     min-height: 100vh;
-    border-radius: var(--cr-x);
+    border-radius: var(--radius-xl);
    
     &__content{
         height: min-content;
          display: flex;
          flex-direction: column;
-        gap: var(--pm-x);
+        gap: var(--spacing-m);
     }
 img{
-    border-radius: calc(var(--cr-x) - var(--pm-x));
+    border-radius: calc(var(--radius-xl) - var(--spacing-m));
 }
 }
