--- a/src/shared/ui/Blank_Field_Wrapper/Style.scss
+++ b/src/shared/ui/Blank_Field_Wrapper/Style.scss
@@ -1,9 +1,9 @@
 .text__error{
     width: 100%;
    color: red;
-padding-left: var(--pm-x);
+padding-left: var(--spacing-m);
     display: flex;
     align-items: center;
     justify-items: center;
-    gap: var(--pm-m);
+    gap: var(--spacing-xs);
 }
