--- a/src/shared/ui/blocks/richtext/RichText.scss
+++ b/src/shared/ui/blocks/richtext/RichText.scss
@@ -15,7 +15,7 @@
       top: 50%;
       left: -4px;
       height: 2em;
-      background-color: var(--bg-color-02);
+      background-color: var( --block-bg);
       width: 5px;
       margin-top: -1em;
     }
@@ -63,11 +63,11 @@
       top: 0;
       bottom: 0;
       width: 0.5rem;
-      background: var(--list-color);
+      background: var(--list-item-text);
     }
   }
   .paragraph {
-    padding: var(--pm-s) 0;
+    padding: var(--spacing-xxs) 0;
   }
   .text-center {
     text-align: center;
@@ -126,16 +126,16 @@
       width: 2.5rem;
       line-height: 2rem;
       // border-radius: 1.25rem;
-      border: 0.25rem solid var(--bg-color-02);
+      border: 0.25rem solid var( --block-bg);
       text-align: center;
 
-      // background: var(--list-color);
-      //   color: var(--btn-color);
+      // background: var(--list-item-text);
+      //   color: var(--button-text);
     }
   }
   ul,
   ol {
-    margin-bottom: var(--pm-m);
+    margin-bottom: var(--spacing-xs);
   }
   .link_wrap {
     box-sizing: border-box;
