--- a/src/shared/ui/empty/empty.scss
+++ b/src/shared/ui/empty/empty.scss
@@ -4,7 +4,7 @@
  
     &-content{
        
-        margin-top: var(--pm-x3) ;
+        margin-top: var(--spacing-xl) ;
         width: 100%;
     }
   
