--- a/src/shared/ui/radio/radio.scss
+++ b/src/shared/ui/radio/radio.scss
@@ -2,7 +2,7 @@
     width: 100%;
     fieldset {
         width: 100%;
-        padding: var(--pm-m);
+        padding: var(--spacing-xs);
        
         // box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         display: inline-block;
@@ -21,7 +21,7 @@
         -webkit-appearance: none;
         width: 20px;
         height: 20px;
-        border: 2px solid var(--btn-bg);
+        border: 2px solid var(--button-bg);
         border-radius: 50%;
         margin-right: 10px;
         background-color: transparent;
@@ -34,7 +34,7 @@
         display: block;
         width: 12px;
         height: 12px;
-        background-color: var(--btn-bg);
+        background-color: var(--button-bg);
         border-radius: 50%;
         position: absolute;
         top: 50%;
@@ -62,18 +62,18 @@
         }
         45% {
             transform: translate(-50%, -50%) scale(1.6);
-            background-color: var(--btn-bg);
+            background-color: var(--button-bg);
         }
         50% {
             transform: translate(-50%, -50%) scale(1.7);
-            background-color: var(--btn-bg);
+            background-color: var(--button-bg);
         }
         55% {
             transform: translate(-50%, -50%) scale(1.6);
         }
         100% {
             transform: translate(-50%, -50%) scale(1);
-            background-color: var(--btn-bg);
+            background-color: var(--button-bg);
         }
     }
     
