--- a/src/widgets/navigation/ui/nav.scss
+++ b/src/widgets/navigation/ui/nav.scss
@@ -1,10 +1,7 @@
-.aside-left {
+.nav {
   grid-area: nav;
   width: 100%;
   height: 100vh;
-  padding: var(--pm-x) 0  var(--pm-x) var(--pm-x);
-
-  // row-gap: 10px;
   position: sticky;
   top: 0px;
   -webkit-touch-callout: none; /* iOS Safari */
@@ -13,22 +10,37 @@
   -moz-user-select: none; /* Old versions of Firefox */
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none; /* Non-prefixed version, currently
-                                supported by Chrome, Edge, Opera and Firefox */
-  .nav-container {
-    background-color: var(--bg-color-nav);
+    
+  
+  supported by Chrome, Edge, Opera and Firefox */
+
+  &-menu {
+    height: 100%;
+    // height: 100vh;
+    background-color: var(--panel-bg);
     width: 100%;
-    padding: var(--pm-m);
+    padding: var(--spacing-xs);
     display: grid;
-    grid-template-rows: 1fr 60px;
+    grid-template-rows: 1fr 40px;
   }
 
   /* Для мобильных устройств */
 
   @media screen and (max-width: 768px) {
-    position: absolute;
+    position:fixed;
     z-index: 99;
     top: 0;
     left: 0;
+
+    z-index: 1000;
+    transform: translateX(-100%); /* Start off-screen */
+    opacity: 0; /* Invisible initially */
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+
+    &.active {
+      transform: translateX(0); /* Slide into view */
+      opacity: 1; /* Fully visible */
+    }
   }
 
   /* Для планшетов */
@@ -38,17 +50,18 @@
 
   /* Для ПК */
   @media screen and (min-width: 1200px) {
-    .nav-container {
-      border-radius: var(--cr-m);
+    padding: var(--spacing-m) 0 var(--spacing-m) var(--spacing-m);
+    .nav-menu {
+      border-radius: var(--radius-md);
     }
-  
-    // margin: var(--pm-x);
-    // top: var(--pm-x);
-    // height: calc(100vh - var(--pm-x) * 2);
+
+    // margin: var(--spacing-m);
+    // top: var(--spacing-m);
+    // height: calc(100vh - var(--spacing-m) * 2);
   }
 
   &__container-nav {
-    // font-size: var(--pm-s);
+    // font-size: var(--spacing-xxs);
     color: var(--font-color-light);
     a {
       color: var(--font-color-light);
@@ -66,16 +79,17 @@
   .ui-vertical-navigation__list-item {
     display: flex;
     flex-direction: column;
-    row-gap: var(--pm-m);
+    row-gap: var(--spacing-xs);
+
   }
   .ui-vertical-navigation-item__wrapper {
-    padding: var(--pm-s) var(--pm-x);
-    border-radius: var(--cr-xs);
-    background-color: var(--bg-color-nav-item);
-    color: var(--item-menu-color);
+    padding: var(--spacing-xs) var(--spacing-m);
+    border-radius: var(--radius-md);
+    background-color: var( --panel-item-bg);
+    color: var(--menu-item-text);
     &:hover {
-      background-color: var(--btn-bg-h);
-      color: var(--btn-color);
+      background-color: var(--button-bg-hover);
+      color: var(--button-text);
     }
   }
   .Tree {
@@ -90,52 +104,93 @@
   width: 100%;
   position: fixed;
   bottom: 0;
-  padding: var(--pm-x);
+  padding: var(--spacing-m);
   z-index: 80;
   display: flex;
   justify-content: end;
-  // background-color: var(--bg-color-02);
+  // background-color: var( --block-bg);
+  backdrop-filter: blur(10px) saturate(100%) brightness(100%);
 }
 .menu__bottom {
-  width: 100%;
+  width: 80%;
   display: flex;
   justify-content: space-between;
-}
-.nav_menu_tree-header{
   position: relative;
-  &-icon{
+  // &::after{
+  //   position: absolute;
+  //   top: -20px;
+  //   left: 50%;
+  //   transform: translateX(-40%);
+  //   width: 100%;
+  //   border-top: 1px solid #ce0d0d;
+  //   content: ' ';
+
+  // }
+}
+.nav_menu_tree-header {
+  position: relative;
+  &-icon {
     position: absolute;
     top: 50%;
-    right: var(--pm-s);
+    right: var(--spacing-xxs);
     width: 40px;
-    height: 40px;
-    // background-color: red;
+    height: 40px;    // background-color: red;
     transform: translateY(-50%);
     display: flex;
     align-items: center;
     justify-content: center;
   }
 }
-.nav_menu-content_tree{
-  background-color: var(--bg-color-nav-item);
+.nav_menu-content_tree {
+  background-color: var( --panel-item-bg);
 
-  border-radius: var(--cr-s);
+  border-radius: var(--radius-md);
   display: flex;
   flex-direction: column;
-  // row-gap: var(--pm-m);
-  &-list{ 
-  padding: 0 var(--pm-s);
-  display: flex;
-  flex-direction: column;
-  row-gap: var(--pm-m);
-  .nav_menu-content_item{
+  // row-gap: var(--spacing-xs);
+  &-list {
+    padding: 0 var(--spacing-xxs);
+    display: flex;
+    flex-direction: column;
+    row-gap: var(--spacing-xs);
 
-    &:first-child{
-      margin-top: var(--pm-m);
+    .nav_menu-content_item {
+      &:first-child {
+        margin-top: var(--spacing-xs);
+      }
+      &:last-child {
+        margin-bottom: var(--spacing-xs);
+      }
     }
-   &:last-child{
-    margin-bottom:var(--pm-m);
-   }
   }
+}
+
+.nav_menu_tree-header-icon {
+  transition: transform 0.3s ease;
+}
+
+.nav_menu_tree-header-icon.open {
+  transform: translateY(-50%) rotate(180deg); /* Поворот иконки вниз */
+}
+
+.nav_menu_tree-header-icon.closed {
+  transform:translateY(-50%) rotate(0deg); /* Поворот иконки вверх */
+}
+
+
+
+.nav-menu-close{
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--menu-item-text);
+  padding: var(--spacing-m); 
+  background-color:var( --panel-item-bg);
+  border-radius: var(--radius-md);
+  svg{
+    width: 20px;
+    height: 20px;
   }
 }
