--- a/src/widgets/soCool/ui/SoCool.scss
+++ b/src/widgets/soCool/ui/SoCool.scss
@@ -2,9 +2,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 24px;
-    background-color: #ffffff;
+    // border-radius: 24px;
+    // background-color: #ffffff;
     padding: 20px;
+    max-width: 100%;
+    img{
+        width: 100%;
+        margin-bottom: 20px;
+    }
     span{
 
         padding: 10px 20px;
