--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -22,7 +22,8 @@
   --block-bg: #ffffff; /* Фон блоков */
  
     /* Тени */
-  --shadow-color: rgba(9, 36, 51, 0.12);
+  --shadow-color-1: rgba(60, 64, 67, 0.3);
+  --shadow-color-2: rgba(9, 36, 51, 0.12);
 
    /* Цвета текста */
   --font-color-light: #000000;
