--- a/src/app/styles/font-size.scss
+++ b/src/app/styles/font-size.scss
@@ -1,4 +1,7 @@
 .app{
-    --font-s:15px;
-    --font-m:20px;
+    --font-size-small: 0.75rem; /* 12px */
+    --font-size-medium: 1rem;  /* 16px */
+    --font-size-large: 1.25rem; /* 20px */
+    --font-size-xl: 1.5rem;    /* 24px */
+    --font-size-xxl: 2rem;     /* 32px */
 }
