--- a/src/shared/ui/Input/Style.scss
+++ b/src/shared/ui/Input/Style.scss
@@ -62,7 +62,7 @@
     outline: none;
     border: 2px solid var(--button-bg);
     background-color: transparent;
-    font-size: var(--font-m);
+    font-size: var(--font-size-large);
     color: var(--font-color-light);
   }
 }
