--- a/src/app/styles/themes/GreenBrown.scss
+++ b/src/app/styles/themes/GreenBrown.scss
@@ -20,11 +20,11 @@
     --background-alt: #d0c000; /* Альтернативный фон */
     --panel-bg: #d0c000; /* Фон панели */
     --panel-item-bg: #ffffff; /* Фон элементов панели */
-    --block-bg: #ffffff; /* Фон блоков */
+    --block-bg: #d0c000; /* Фон блоков */
    
     /* Тени */
-    --shadow-color-1: rgba(60, 64, 67, 0.3);
-    --shadow-color-2: rgba(9, 36, 51, 0.12);
+    --shadow-color-1: rgba(60, 64, 67, 0);
+    --shadow-color-2: rgba(9, 36, 51, 0);
    
     /* Цвета текста */
     --font-color-light: #000000;
