--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -9,7 +9,7 @@
   --button-bg-hover: #ff5d40; /* Фон кнопки при наведении */
 
   /* Цвета меню */
-  --menu-item-text: #374151; /* Цвет текста элементов меню */
+  --menu-item-text: #000000; /* Цвет текста элементов меню */
 
   /* Цвета списков */
   --list-item-text: #15088b; /* Цвет текста в списках */
@@ -22,8 +22,10 @@
   --block-bg: #ffffff; /* Фон блоков */
  
     /* Тени */
-  --shadow-color-1: rgba(60, 64, 67, 0.3);
-  --shadow-color-2: rgba(9, 36, 51, 0.12);
+  --shadow-color-1:  rgba(32, 35, 51, .04);
+  --shadow-color-2: rgba(32, 35, 51, .02);
+
+
 
    /* Цвета текста */
   --font-color-light: #000000;
