--- a/src/features/accessibilityMode/ui/Style.scss
+++ b/src/features/accessibilityMode/ui/Style.scss
@@ -1,6 +1,6 @@
-.SpecialUI{
+.AccessibilityUI{
 width: 100%;
-height: 200px;
+min-height: 200px;
 background-color: rgb(245, 240, 240);
 padding: var(--spacing-l);
 position: relative;
