--- a/src/shared/ui/Input/Style.scss
+++ b/src/shared/ui/Input/Style.scss
@@ -7,7 +7,7 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  font-size: 16px;
+  font-size: var(--font-size-medium);
   font-weight: bold;
   color: var(--button-bg);
   top: 50%;
