--- a/src/shared/ui/toggle/toggle.scss
+++ b/src/shared/ui/toggle/toggle.scss
@@ -5,7 +5,7 @@ align-items: center;
 .checkbox_item .title{
 	padding-bottom: 15px;
 	border-bottom: 1px solid #e5e9ec;
-	font-size: 20px;
+	font-size: var(--font-size-large);
 	font-weight: bold;
 	letter-spacing: 3px;
 	margin-bottom: 25px;
