--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,85 +1,86 @@
-@import 'themes/light.scss';
-@import 'themes/dark.scss';
-@import 'themes/BlackWhite.scss';
-@import 'themes/WhiteBlack.scss';
-@import 'themes/BrownBeige.scss';
-@import 'themes/DarkBlueSky.scss';
-@import 'themes/GreenBrown.scss';
+@import "themes/light.scss";
+@import "themes/dark.scss";
+@import "themes/BlackWhite.scss";
+@import "themes/WhiteBlack.scss";
+@import "themes/BrownBeige.scss";
+@import "themes/DarkBlueSky.scss";
+@import "themes/GreenBrown.scss";
 
-@import 'whitespace.scss';
-@import 'font-size.scss';
+@import "whitespace.scss";
+@import "font-size.scss";
 
+
+@import "kern.scss";
 @font-face {
-    font-family: "Montserrat";
-   src: url(./../../shared/assets/fonts/Montserrat/static/Montserrat-Regular.ttf);
-  }
- /* Стилизация скроллбара */
+  font-family: "Montserrat";
+  src: url(./../../shared/assets/fonts/Montserrat/static/Montserrat-Regular.ttf);
+}
+/* Стилизация скроллбара */
 
 *::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-    }
-   
-    *::-webkit-scrollbar-thumb {
-    background: #333;
- 
-    }
-   
-    *::-webkit-scrollbar-track {
-    background: #f1f1f1;
-    }
-   
-    *::-webkit-scrollbar-track-piece {
-    background: #f1f1f1;
-    }  
-.app {
-   
-   
-    height: 100%;
-    
-    font-family: Montserrat;
-    .button {
-        font-family: Montserrat;
-    }
-}
-.shadow__style{
-    // -webkit-box-shadow: 0 1px 1px rgba(32, 35, 51, .04), 0 2px 4px rgba(32, 35, 51, .02); 
-    // box-shadow: 0 1px 1px rgba(32, 35, 51, .04), 0 2px 4px rgba(32, 35, 51, .02);
-    box-shadow: var(--shadow-color-1) 0px 1px 2px 0px, var(--shadow-color-2) 0px 1px 3px 1px;
+  width: 10px;
+  height: 10px;
 }
 
+*::-webkit-scrollbar-thumb {
+  background: #333;
+}
+
+*::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+*::-webkit-scrollbar-track-piece {
+  background: #f1f1f1;
+}
+.app {
+  height: 100%;
+
+  font-family: Montserrat;
+  .button {
+    font-family: Montserrat;
+  }
+}
+.shadow__style {
+  -webkit-box-shadow: 0 1px 1px rgba(32, 35, 51, 0.04),
+    0 2px 4px rgba(32, 35, 51, 0.02);
+  box-shadow: 0 1px 1px var(--shadow-color-1), 0 2px 4px var(--shadow-color-2);
+  // box-shadow: var(--shadow-color-1) 0px 1px 2px 0px, var(--shadow-color-2) 0px 1px 3px 1px;
+}
 
 body {
-    // font-family: 'Open Sans', sans-serif;
-    // line-height: 1.5;
-    // font-weight: 400;
-    margin: 0;
+  // font-family: 'Open Sans', sans-serif;
+  // line-height: 1.5;
+  // font-weight: 400;
+  margin: 0;
 
-    min-height: 100vh;
-    scroll-behavior: smooth;
-    text-rendering: optimizeSpeed;
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
 
-    overflow-x: hidden;
+  overflow-x: hidden;
+  
 }
 
 body,
 html,
 #root {
-    height: 100%;
+  height: 100%;
+  
 }
 
 ._container {
-    max-width: 1230px;
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 15px;
-    padding-right: 15px;
+  max-width: 1230px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* ol,
@@ -103,7 +104,7 @@ figcaption,
 blockquote,
 dl,
 dd {
-    margin: 0;
+  margin: 0;
 }
 
 // h1,
@@ -116,16 +117,15 @@ dd {
 
 input,
 button {
-    outline: none;
+  outline: none;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-// * {
-//     scrollbar-width: thin;
-//     scrollbar-color: blue var(--background-main);
-//   }
-  
-  // /* для Chrome/Edge/Safari */
+*{
+    font-size: var(--font-size-medium);
+}
+
+// /* для Chrome/Edge/Safari */
