--- a/src/shared/ui/button/button.scss
+++ b/src/shared/ui/button/button.scss
@@ -2,12 +2,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 10px 20px;
-  font-size: 18px;
+  padding: var(--spacing-s) var(--spacing-l);
+  font-size: var(--font-size-large);
   transition: all 0.15s linear;
   line-height: 1;
   white-space: nowrap;
-  border-radius: var(--radius-md);
+  border-radius: var(--radius-lg);
   
 
   svg {
