--- a/src/shared/ui/form/MaskedInput/style.scss
+++ b/src/shared/ui/form/MaskedInput/style.scss
@@ -1,27 +1,27 @@
 .input {
-    border: 1px solid #ccc;
-    padding: 8px;
-    border-radius: 4px;
-    width: 100%;
-   padding:  var(--spacing-xs) var(--spacing-m);
-   background-color: var(--color-form-input);
-   color: var(--color-form-input-text);
-border-radius: var(--radius-md);
-  }
-  .input--error {
-    border-color: red;
-  }
-  .error-message {
-    color: red;
-    font-size: 12px;
-  }
+  border: 1px solid #ccc;
+  padding: 8px;
+  border-radius: 4px;
+  width: 100%;
+  padding: var(--spacing-xs) var(--spacing-m);
+  background-color: var(--color-form-input);
+  color: var(--color-form-input-text);
+  border-radius: var(--radius-md);
+}
+.input--error {
+  border-color: var(--red);
+}
+.error-message {
+  color: var(--red);
+  font-size: var(--font-size-small);
+}
 
-  .input_container{
-    display: flex;
-    flex-direction: column;
-    gap: var(--spacing-xs);
-    label{
-        font-size: 14px;
-        padding-left: var(--spacing-xs);
-    }
+.input_container {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-xs);
+  label {
+    font-size: var(--font-size-medium);
+    padding-left: var(--spacing-xs);
   }
+}
