--- a/src/widgets/contact/ui/contact.scss
+++ b/src/widgets/contact/ui/contact.scss
@@ -50,7 +50,7 @@
       width: 100%;
     }
     span {
-      font-size: 24px;
+      font-size: var( --font-size-xl);
       text-align: center;
     }
   }
