--- a/src/widgets/footer/ui/footer.scss
+++ b/src/widgets/footer/ui/footer.scss
@@ -43,9 +43,9 @@
   h4 {
     position: relative;
     width: 100%;
-    font-size: 20px;
+    font-size: var(--font-size-large);
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: var(--spacing-m);
   }
   h4::before {
     content: "";
@@ -58,6 +58,7 @@
     width: 100px;
   }
   &__List {
+    
     list-style: none;
     margin: 0;
     padding: 0;
@@ -69,6 +70,7 @@
       margin-bottom: var(--spacing-xxs);
       transition: all 0.3s ease;
       font-weight: bold;
+      margin-bottom: var(--radius-lg);
       &:hover {
         padding-left: 8px;
 
