fixed menu markup

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -29,6 +29,7 @@
   --shadow-color-1: rgba(255, 128, 0, 0.3); /* Новый цвет 1 */
   --shadow-color-2: rgba(255, 0, 0, 0.12); /* Новый цвет 2 */
   --font-color-light: #d4e5ee;
+  --font-color-gray: #ebebf5bb;
   --link-color: rgb(146, 132, 207);
   --color-form-input: #2c2c30;
   --color-form-input-text: #fff;
