--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -42,9 +42,9 @@
   --shadow-color-2: rgba(0, 0, 0, 0.226);
 
 
-
    /* Цвета текста */
   --font-color-light: #000000;
+  --font-color-gray: #5a5959;
      /* Цвета input */
   --color-form-input: #ffffff;
   --color-form-input-text: #000000;
